# openconv

./: .env.example  .gitignore  Cargo.toml  config.toml  docker-compose.yml  justfile  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: .oxfmtignore  .oxfmtrc.json  .oxlintrc.json  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  bindings.ts  index.css  index.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: auth_service.rs  db.rs  lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: auth.rs  health.rs
apps/desktop/src/__tests__/: App.test.tsx  setup.ts  theme.test.ts
apps/desktop/src/__tests__/components/: Avatar.test.tsx  Button.test.tsx  DragRegion.test.tsx  Dropdown.test.tsx  Input.test.tsx  Modal.test.tsx  StatusDot.test.tsx  Toast.test.tsx  Tooltip.test.tsx  responsive.test.tsx
apps/desktop/src/__tests__/helpers/: mockTauri.ts  renderWithProviders.tsx
apps/desktop/src/__tests__/hooks/: usePlatform.test.ts
apps/desktop/src/__tests__/mock/: api.test.ts  data.test.ts  seed.test.ts
apps/desktop/src/__tests__/routes/: LoginPage.test.tsx  ProtectedRoute.test.tsx  RecoverPage.test.tsx  RegisterPage.test.tsx
apps/desktop/src/components/ui/: Avatar.tsx  (+13 more)
apps/desktop/src/hooks/: usePlatform.ts  useResponsiveCollapse.ts
apps/desktop/src/mock/: api.ts  data.ts  seed.ts
apps/desktop/src/routes/: AppLayout.tsx  LoginPage.tsx  ProtectedRoute.tsx  RecoverPage.tsx  RegisterPage.tsx
apps/desktop/src/store/: authSlice.ts  channelsSlice.ts  guildsSlice.ts  index.ts  membersSlice.ts  messagesSlice.ts  presenceSlice.ts  uiSlice.ts  unreadSlice.ts
apps/desktop/src/types/: index.ts
apps/server/: Cargo.toml  config.toml
apps/server/migrations/: 20240101000001_users.sql  20240101000002_pre_key_bundles.sql  20240101000003_guilds.sql  20240101000004_channels.sql  20240101000005_roles.sql  20240101000006_guild_members.sql  20240101000007_dm_channels.sql  20240101000008_messages.sql  20240101000009_files.sql  20240101000010_devices.sql  20240101000011_refresh_tokens.sql  20240101000012_users_add_key_changed.sql  20240101000013_prekeys_add_device.sql  20240101000014_guilds_add_deleted_at.sql  20240101000015_roles_add_role_type.sql  20240101000016_channels_add_topic.sql  20240101000017_guild_invites.sql  20240101000018_dm_channels_add_group_fields.sql  20240101000019_messages_to_bytea.sql
apps/server/src/: config.rs  crypto_verify.rs  email.rs  error.rs  jwt.rs  lib.rs  main.rs  openapi.rs  permissions.rs  redis.rs  router.rs  shutdown.rs  state.rs  storage.rs  validation.rs
apps/server/src/extractors/: auth.rs  channel_member.rs  guild_member.rs  mod.rs
apps/server/src/handlers/: auth.rs  channels.rs  dm_channels.rs  files.rs  guilds.rs  health.rs  invites.rs  messages.rs  mod.rs  roles.rs  users.rs  ws.rs
apps/server/src/middleware/: rate_limit.rs
apps/server/src/tasks/: cleanup.rs  file_cleanup.rs  guild_cleanup.rs  mod.rs
apps/server/src/ws/: connection.rs  fanout.rs  mod.rs  presence.rs  replay.rs  state.rs  types.rs
apps/server/tests/: auth_login.rs  channels.rs  dm_channels.rs  guilds.rs  health.rs  invites.rs  migrations.rs  recovery.rs  registration.rs  roles.rs  sessions.rs  users.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: error.rs  file_encryption.rs  fingerprint.rs  identity.rs  lib.rs  master_key.rs  message.rs  prekeys.rs  session.rs
crates/crypto/src/storage/: identity_store.rs  kyber_pre_key_store.rs  migrations.rs  mod.rs  pre_key_store.rs  sender_key_store.rs  session_store.rs  signed_pre_key_store.rs
crates/crypto/tests/: integration_smoke_test.rs
crates/shared/: Cargo.toml
crates/shared/src/: constants.rs  error.rs  ids.rs  lib.rs  permissions.rs
crates/shared/src/api/: auth.rs  channel.rs  dm_channel.rs  file.rs  guild.rs  invite.rs  message.rs  mod.rs  role.rs  user.rs  ws.rs
planning/: deep_project_interview.md  deep_project_session.json  project-manifest.md  requirements.md
planning/01-project-foundation/: claude-integration-notes.md  claude-interview.md  claude-plan-tdd.md  claude-plan.md  claude-research.md  claude-spec.md  deep_plan_config.json  spec.md
planning/01-project-foundation/implementation/: deep_implement_config.json  usage.md
planning/01-project-foundation/implementation/code_review/: section-01-diff.md  section-01-interview.md  section-01-review.md  section-02-diff.md  section-02-interview.md  section-02-review.md  section-03-diff.md  section-03-interview.md  section-03-review.md  section-04-diff.md  section-04-interview.md  section-04-review.md  section-05-diff.md  section-05-interview.md  section-05-review.md  section-06-diff.md  section-06-interview.md  section-06-review.md  section-07-diff.md  section-07-interview.md  section-07-review.md  section-08-diff.md  section-08-interview.md  section-08-review.md  section-09-diff.md  section-09-interview.md  section-09-review.md
planning/01-project-foundation/reviews/: iteration-1-opus.md
planning/01-project-foundation/sections/: deep_project_session.json  index.md  section-01-monorepo-setup.md  section-02-shared-crate.md  section-03-server-scaffold.md  section-04-postgres-migrations.md  section-05-tauri-scaffold.md  section-06-sqlite-migrations.md  section-07-react-frontend.md  section-08-dev-tooling.md  section-09-testing.md
planning/01-project-foundation/sections/.prompts/: section-01-monorepo-setup-prompt.md  section-02-shared-crate-prompt.md  section-03-server-scaffold-prompt.md  section-04-postgres-migrations-prompt.md  section-05-tauri-scaffold-prompt.md  section-06-sqlite-migrations-prompt.md  section-07-react-frontend-prompt.md  section-08-dev-tooling-prompt.md  section-09-testing-prompt.md
planning/02-crypto-identity/: spec.md
planning/03-auth-users/: spec.md
planning/04-server-core/: spec.md
planning/05-desktop-client/: spec.md
planning/06-messaging-features/: spec.md
(+79 files in other folders)
