[package]
name = "openconv-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openconv-server"
path = "src/main.rs"

[dependencies]
openconv-shared = { path = "../../crates/shared", features = ["sqlx"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
