[package]
name = "openconv-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openconv-server"
path = "src/main.rs"

[dependencies]
openconv-shared = { path = "../../crates/shared", features = ["sqlx"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
fred = { workspace = true }
lettre = { workspace = true }
async-trait = { workspace = true }
libsignal-protocol = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
subtle = { workspace = true }
regex = { workspace = true }
object_store = { workspace = true }
axum-extra = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }
