[package]
name = "openconv-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
openconv-shared = { path = "../shared" }
rusqlite = { workspace = true }
keyring = { workspace = true }
argon2 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
libsignal-protocol = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
