[package]
name = "openconv-shared"
version = "0.1.0"
edition = "2021"

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }

[dependencies.sqlx]
workspace = true
optional = true
