[package]
name = "openconv-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
openconv-shared = { path = "../../../crates/shared" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
